--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 		        <a href="views/servicios.html">Servicios</a>
 		      </li>
 		      <li>
-		        <a href="#">Turnos</a>
+		        <a href="views/turnos.html">Turnos</a>
 		      </li>
 		      <li>
-		        <a href="#">Busca tus resultados</a>
+		        <a href="views/resultados.html">Busca tus resultados</a>
 		      </li>
 		      <li>
-		        <a href="#">Contacto</a>
+		        <a href="views/contacto.html">Contacto</a>
 		      </li>
 		      
 		    </ul>
@@ -111,13 +111,13 @@
 		        <a class="nav-link" href="views/servicios.html">Servicios</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Turnos</a>
+		        <a class="nav-link" href="views/turnos.html">Turnos</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Busca tus resultados</a>
+		        <a class="nav-link" href="views/resultados.html">Busca tus resultados</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Contacto</a>
+		        <a class="nav-link" href="views/contacto.html">Contacto</a>
 		      </li>
 		      
 		    </ul>
