agregando mq a index y nosotros

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 <main class="container-fluid main-principal">
 	<div class="row">
 		<article class="col-lg-12 col-12">
-	   			<h1>Consultorio de Ecografías </h1>
+	   			<h1 class="titulo__principal ">Consultorio de Ecografías </h1>
 	
-			    <P>Victoria Rovella Battocchia Médica Esp. en diagnóstico por imágenes</P>
+			    <P class="parrafo-principal ">Victoria Rovella Battocchia Médica Esp. en diagnóstico por imágenes</P>
 		</article>
 		</div>
 </main>
@@ -69,12 +69,14 @@
 	<div class="row text-color">
 	
 		<div class="col-lg-12 col-12 ">
-					<h2>Nuestro consultorio</h2>
+					<h2 class="subtitulo-index animate__heartBeat">Nuestro consultorio</h2>
 		</div>
 		</div>
 		<div class="row align-items-center">
 		<div class="col-lg-6 col-12 ">		
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo perspiciatis, quos quod hic soluta veniam inventore tempora tenetur saepe sequi cupiditate, rem laboriosam, error. Dolorum non eligendi sit quam perferendis?</p>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque aliquam nam saepe, magnam dolorum dicta autem sequi, quidem facere unde maiores nisi perspiciatis sunt, voluptas pariatur qui dolor sapiente fugit.
+					Quaerat maiores molestiae optio vero commodi, incidunt sint perspiciatis ipsum voluptate distinctio facere, dolor ea esse in porro nulla explicabo et ex suscipit voluptas eaque dolorem. Consectetur provident nulla, a.
+					Quos vitae, explicabo voluptate qui maxime. Aut cumque cum dignissimos! Fugit, adipisci modi necessitatibus veniam dignissimos enim sit commodi assumenda architecto esse praesentium nam ex placeat corporis quibusdam ut deserunt.</p>
 		</div>				
 			
 	<div class="col-lg-6 col-12">		
